# Eva_Cosmetics

./: .gitignore  README.md  UPLOAD_NOTES.md  eva_group_emails.csv  eva_products.csv  index.html  package-lock.json  package.json  requirements-analysis.txt  requirements.txt  vercel.json
RN Library/: README.md  arabic_nlp_demo.ipynb  pyproject.toml  smoke_test.py
RN Library/src/arabic_nlp/: __init__.py  egyptian_arabic_dictionary_v2.csv  ir.py  normalization.py  preprocess.py  stemming.py  stopwords.py  tokenization.py
RN Library/src/arabic_nlp/representations/: __init__.py  base.py  bert.py  elmo.py  word2vec.py
RN Library/tests/: test_ir.py  test_preprocess.py
analysis/: __init__.py  employee_raise_model.py  tiktok_comparison.py
api/: health.py  search.py  suggest.py
backend/: eva_query_processing.py  search_api.py
search_index/: eva_products_search_docs.json  eva_products_tfidf_index.json
selenium/: eva_scraper.py  view-source_https___www.shop.eva-cosmetics.com.html  view_source_https_www_shop_eva_cosmetics_com_collections_male_grooming.html
selenium/new page/: view-source_https___www.shop.eva-cosmetics.com_products_aloe-eva-strengthening-hair-mask-pouch-with-aloe-vera-yoghurt-proteins-250-gm.html  view-source_https___www.shop.eva-cosmetics.com_products_man-look-expert-masculine-body-fragrance-midnight-millionaire-150-ml.html
src/app/: App.tsx
src/app/data/: mockData.ts
src/imports/: enterprise-search-frontend.md
src/styles/: theme.css
tiktok scraper/: maluukss0_tiktok_20260508_213407.csv  samaalwagih__tiktok_20260508_213457.csv  scraper.py
(+11 files in other folders)
