[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "RNArabic"
version = "0.1.0"
description = "Lightweight Arabic text preprocessing utilities."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
authors = [{ name = "Rawan Ibrahim", email = "rawan.mahaba@gmail.com" }]
license = { text = "MIT" }
keywords = ["arabic", "nlp", "text-processing", "information-retrieval"]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Topic :: Text Processing :: Linguistic",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
nltk = ["nltk>=3.8.1"]
ml = ["numpy>=1.22"]
transformers = ["torch>=2.0", "transformers>=4.35"]
elmo = ["allennlp>=2.10.0", "allennlp-models>=2.10.0"]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
